--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Matt Schlosser",
   "license": "MIT",
   "dependencies": {
+    "chart.js": "^2.9.4",
     "node-html-parser": "^1.4.5",
+    "vue-chartjs": "^3.5.1",
     "vue-loader": "^15.9.4"
   },
   "devDependencies": {
