--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-loader": "^15.9.4"
   },
   "devDependencies": {
+    "css-loader": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
