--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chart.js": "^2.9.4",
     "node-html-parser": "^1.4.5",
     "vue-chartjs": "^3.5.1",
-    "vue-loader": "^15.9.4"
+    "vue-loader": "^15.9.4",
+    "vue-style-loader": "^4.1.2"
   },
   "devDependencies": {
     "css-loader": "^5.0.0",
