--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "node-html-parser": "^1.4.5",
     "vue-chartjs": "^3.5.1",
     "vue-loader": "^15.9.4",
-    "vue-style-loader": "^4.1.2"
+    "vue-style-loader": "^4.1.2",
+    "vuetify": "^2.3.16"
   },
   "devDependencies": {
     "css-loader": "^5.0.0",
+    "deepmerge": "^4.2.2",
     "html-webpack-plugin": "^4.5.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.0.5",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.3.2",
