--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "^4.5.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.0.5",
+    "style-loader": "^2.0.0",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.3.2",
