--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuetify": "^2.3.16"
   },
   "devDependencies": {
+    "@vue/cli-plugin-router": "~4.5.0",
     "css-loader": "^5.0.0",
     "deepmerge": "^4.2.2",
     "html-webpack-plugin": "^4.5.0",
