--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.0.0",
     "deepmerge": "^4.2.2",
     "html-webpack-plugin": "^4.5.0",
