--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "chart.js": "^2.9.4",
+    "distinct-colors": "^3.0.0",
     "node-html-parser": "^3.1.0",
     "vue-loader": "^15.9.4",
     "vue-style-loader": "^4.1.2",
