--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "chart.js": "^2.9.4",
+    "chartjs-annotation": "^0.5.7",
+    "chartjs-plugin-annotation": "^0.5.7",
     "distinct-colors": "^3.0.0",
     "node-html-parser": "^3.1.0",
     "vue-loader": "^15.9.4",
